# Quantum_edge

./: .env.example  .gitignore  README.md  docker-compose.infra.yml  docker-compose.yml  keep-awake.sh  pyproject.toml  start.sh  stop.sh
.github/workflows/: ci.yml
agents/agent_01_news_scanner/: main.py
agents/agent_02_market_data/: main.py
agents/agent_03_events_engine/: main.py
agents/agent_04_momentum_bot/: main.py
agents/agent_05_risk_guard/: main.py
agents/agent_06_data_scientist/: main.py
agents/agent_07_smart_money/: main.py
agents/agent_08_position_monitor/: main.py
coordinator/: main.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/components/: AgentCard.jsx  AllocationChart.jsx  EquityChart.jsx  PipelineView.jsx  PnlBarChart.jsx  PositionsTable.jsx  Sidebar.jsx  StatCard.jsx  TradeHistory.jsx
dashboard/src/data/: mockData.js
dashboards/: streamlit_app.py
infrastructure/: Makefile
infrastructure/docker/: Dockerfile.agent  Dockerfile.coordinator  Dockerfile.dashboard  nginx.conf
infrastructure/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
infrastructure/scripts/: build-push-images.sh  deploy-ecs.sh  deploy.sh  init_redis_streams.py  init_timescaledb.sql
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
quantum_edge/: api.py
quantum_edge/broker/: alpaca.py  base.py  ibkr.py  rithmic.py
quantum_edge/core/: auth.py  base_agent.py  config.py  context_store.py  decision_engine.py  memo_factory.py  memo_store.py  message_bus.py  pipeline_coordinator.py  strategy.py  watchlist_scanner.py
quantum_edge/models/: events.py  memo.py  portfolio.py  signals.py
quantum_edge/utils/: idempotency.py  logging.py  metrics.py
scripts/: seed_test_data.py  setup_auth.py
tests/integration/: test_full_pipeline.py  test_pipeline.py
tests/unit/: test_context_store.py  test_decision_engine.py  test_idempotency.py  test_message_bus.py  test_models.py
(+39 files in other folders)
